# redis-postgres-migrator

./: .gitignore  Cargo.toml  README.md  core-busybox-static-1.24.2-20161214032531-x86_64-linux.hart
src/: error.rs  lib.rs  main.rs
src/migrators/: account.rs  account_origin.rs  invitation.rs  mod.rs  origin.rs  origin_key.rs  origin_member.rs  package.rs  secret_key.rs
src/postgres_data_store/: Cargo.toml  mod.rs
src/postgres_data_store/src/: lib.rs
src/postgres_lib/: Cargo.toml  mod.rs
src/postgres_lib/builder-db/: Cargo.toml
src/postgres_lib/builder-db/src/: config.rs  pool.rs
src/postgres_lib/builder-originsrv/: Cargo.toml
src/postgres_lib/builder-originsrv/src/: data_store.rs
src/postgres_lib/builder-protocol/: Cargo.toml
src/postgres_lib/builder-sessionsrv/src/: data_store.rs
src/postgres_lib/src/: lib.rs
src/redis_data_store/: config.rs  mod.rs
src/redis_data_store/builder-dbcache/: Cargo.toml
src/redis_data_store/builder-dbcache/src/: lib.rs
src/redis_data_store/builder-protocol/: Cargo.toml
src/redis_data_store/builder-protocol/protocols/: sessionsrv.proto
src/redis_data_store/core/: Cargo.toml
src/redis_extraction/: Cargo.toml
src/redis_extraction/src/: lib.rs
src/redis_lib/: Cargo.toml
src/redis_lib/builder-dbcache/: Cargo.toml
src/redis_lib/builder-dbcache/src/: lib.rs
src/redis_lib/builder-depot/: Cargo.toml  build.rs
src/redis_lib/builder-depot/src/: data_store.rs  error.rs  lib.rs  main.rs  server.rs
src/redis_lib/builder-protocol/: Cargo.toml
src/redis_lib/builder-protocol/src/: lib.rs  sessionsrv.rs
src/redis_lib/builder-protocol/src/message/: jobsrv.rs  routesrv.rs  vault.rs
src/redis_lib/builder-sessionsrv/: Cargo.toml
src/redis_lib/builder-sessionsrv/src/: config.rs  data_store.rs  lib.rs
src/redis_lib/builder-sessionsrv/src/server/: handlers.rs  mod.rs
src/redis_lib/builder-vault/: Cargo.toml
src/redis_lib/builder-vault/src/: lib.rs
src/redis_lib/core/: Cargo.toml
src/redis_lib/net/: Cargo.toml
src/redis_lib/net/src/: error.rs  lib.rs
src/redis_lib/net/src/http/: controller.rs  headers.rs  middleware.rs  mod.rs  rendering.rs
src/redis_lib/net/src/oauth/: github.rs
src/redis_lib/src/: lib.rs
src/redis_postgres_migrator_postgres_lib/: Cargo.toml
src/redis_postgres_migrator_postgres_lib/src/: lib.rs
src/redis_postgres_migrator_redis_lib/: Cargo.toml  mod.rs
src/redis_postgres_migrator_redis_lib/builder-protocol/: Cargo.toml
src/redis_postgres_migrator_redis_lib/builder-protocol/protocols/: sessionsrv.proto
src/redis_postgres_migrator_redis_lib/builder-protocol/src/message/: depotsrv.rs  net.rs  sessionsrv.rs
src/redis_postgres_migrator_redis_lib/builder-sessionsrv/: Cargo.toml
src/redis_postgres_migrator_redis_lib/builder-sessionsrv/src/: data_store.rs
src/redis_postgres_migrator_redis_lib/builder-sessionsrv/src/server/: handlers.rs
src/redis_postgres_migrator_redis_lib/core/: Cargo.toml
src/redis_postgres_migrator_redis_lib/core/src/os/: mod.rs
src/redis_postgres_migrator_redis_lib/core/src/os/filesystem/: linux.rs
src/redis_postgres_migrator_redis_lib/src/: lib.rs
tests/: integration.rs
tests/fixtures/: core-libcap-2.24-20161208223353-x86_64-linux.hart  core-libossp-uuid-1.6.2-20161214075157-x86_64-linux.hart
tests/fixtures/my_origin_1/: my_origin_public_key.pub
tests/migrators/: account.rs  invitation.rs  mod.rs  origin.rs  origin_key.rs  package.rs  secret_key.rs
