[package]
name = "redis-postgres-migrator"
version = "0.1.0"
authors = ["Nell Shamrell <nellshamrell@gmail.com>"]

[dependencies]
regex = "*"

[dependencies.redis_extraction]
path = "./src/redis_extraction"

[dependencies.redis_lib]
path = "./src/redis_lib/"

[dependencies.postgres_lib]
path = "./src/postgres_lib/"

[dependencies.habitat_builder_sessionsrv]
path = "./src/postgres_lib/builder-sessionsrv"
