[package]
name = "redis_postgres_migrator"
version = "0.1.0"
authors = ["Nell Shamrell <nellshamrell@gmail.com>"]

[dependencies]
regex = "*"
protobuf = "*"

[dependencies.redis_extraction]
path = "./src/redis_extraction"

[dependencies.redis_lib]
path = "./src/redis_lib/"

[dependencies.habitat_builder_protocol_redis]
path = "./src/redis_lib/builder-protocol"

[dependencies.postgres_lib]
path = "./src/postgres_lib/"

[dependencies.habitat_builder_originsrv]
path = "./src/postgres_lib/builder-originsrv"

[dependencies.habitat_builder_protocol]
path = "./src/postgres_lib/builder-protocol"

[dependencies.habitat_builder_sessionsrv]
path = "./src/postgres_lib/builder-sessionsrv"

[dependencies.habitat_core]
path = "./src/postgres_lib/core"
