[package]
name = "redis_lib"
version = "0.1.0"
authors = ["Nell Shamrell <nellshamrell@gmail.com>"]

[dependencies]
bitflags = "*"
env_logger = "*"
hyper = "*"
log = "*"
protobuf = "*"
r2d2 = "*"
r2d2_redis = "*"
redis = "*"
rustc-serialize = "*"
time = "*"
toml = "0.1.29"

[dependencies.habitat_builder_dbcache]
path = "./builder-dbcache"

[dependencies.habitat_builder_protocol]
path = "./builder-protocol"

[dependencies.habitat_core]
path = "./core"

[dependencies.habitat_builder_sessionsrv]
path = "./builder-sessionsrv"

[dependencies.habitat_net]
path = "./net"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"
