[package]
name = "habitat_depot"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder package depot"
build = "build.rs"

[[bin]]
name = "hab-depot"
doc = false

[dependencies]
env_logger = "0.3.5"
libc = "*"
lazy_static = "0.2.1"
libarchive = "0.1.1"
log = "0.3.6"
protobuf = "1.0.24"
r2d2 = "0.7.2"
r2d2_redis = "0.6.0"
redis = "0.8.0"
regex = "0.1.77"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.19"
serde = "0.8.12"
serde_json = "0.8.2"
time = "0.1.35"
toml = "0.1.30"
unicase = "1.4.0"
walkdir = "0.1.8"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.habitat_builder_dbcache_redis]
path = "../builder-dbcache"

[dependencies.habitat_builder_protocol_redis]
path = "../builder-protocol"

[dependencies.habitat_core_redis]
path = "../core"

[dependencies.habitat_net_redis]
path = "../net"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"
branch = "release/v0.8"

[build-dependencies]
serde_codegen = "0.8.12"

[dev-dependencies]
url = "1.2.1"
uuid = "0.3.1"

[features]
functional = []
