[package]
name = "habitat_builder_protocol_redis"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Network Server Protocol"
build = "build.rs"

[dependencies]
protobuf = "*"
redis = "*"
rustc-serialize = "*"
time = "*"

[dependencies.habitat_core_redis]
path = "../core"

[build-dependencies]
pkg-config = "0.3"

[features]
functional = []
protocols = []
