[package]
name = "habitat_net_redis"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
workspace = "../../"

[dependencies]
bitflags = "*"
fnv = "*"
hyper = "*"
iron = "*"
lazy_static = "*"
libc = "*"
log = "*"
num_cpus = "*"
persistent = "*"
protobuf = "*"
rustc-serialize = "*"
time = "*"
unicase = "*"

[dependencies.habitat_builder_protocol_redis]
path = "../builder-protocol"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[features]
functional = []
