[package]
name = "habitat_builder_sessionsrv"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Session Server"

[dependencies]
bitflags = "*"
env_logger = "*"
hyper = "*"
log = "*"
protobuf = "*"
redis = "*"
rustc-serialize = "*"
time = "*"
toml = "0.1.29"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"
branch = "release/v0.8"

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_builder_dbcache]
path = "../builder-dbcache"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.habitat_net]
path = "../net"

[features]
functional = []
