[package]
name = "habitat_core"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>", "Steven Murawski <smurawski@chef.io>"]
workspace = "../../"
build = "build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
errno = "*"
lazy_static = "*"
libarchive = "*"
libc = "*"
libsodium-sys = "*"
log = "*"
regex = "0.1.80"
rustc-serialize = "*"
sodiumoxide = "*"
time = "*"
toml = "0.1.29"
url = "*"

[target.'cfg(not(windows))'.dependencies]
users = "*"

[dev-dependencies]
hyper = "*"
tempdir = "*"

[features]
functional = []
